# congress-trade-tracking

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  reps.py
app/: reps.py  senators.py
data/: pre-2024-rep-data.csv
