[tool.poetry]
name = "senate-trade-tracking"
version = "0.1.0"
description = ""
authors = ["Nicholas Carnevale <nickcarnevale2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
